tests/NormalTests/paczka1/fuzzy1/62004557.err
Error in line 3: A158 A158 66,7
Error in line 37: 8S9dv A929 31,1
